--- a/A5/go-safe/app.json
+++ b/A5/go-safe/app.json
@@ -9,17 +9,23 @@
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.tuonome.tuaapp",
+      "infoPlist": {
+        "NSLocationWhenInUseUsageDescription": "L'app necessita della tua posizione per mostrarti sulla mappa e calcolare i percorsi.",
+        "NSCameraUsageDescription": "Serve l'accesso alla fotocamera per inserire la foto.",
+        "NSPhotoLibraryUsageDescription": "Serve l'accesso alla galleria per caricare la foto."
+      }
     },
     "android": {
-      "adaptiveIcon": {
-        "backgroundColor": "#E6F4FE",
-        "foregroundImage": "./assets/images/android-icon-foreground.png",
-        "backgroundImage": "./assets/images/android-icon-background.png",
-        "monochromeImage": "./assets/images/android-icon-monochrome.png"
-      },
-      "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "package": "com.tuonome.tuaapp",
+      "permissions": [
+        "ACCESS_COARSE_LOCATION",
+        "ACCESS_FINE_LOCATION",
+        "CAMERA",
+        "READ_EXTERNAL_STORAGE",
+        "WRITE_EXTERNAL_STORAGE"
+      ]
     },
     "web": {
       "output": "static",
