--- a/A5/go-safe/package.json
+++ b/A5/go-safe/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native": "^7.1.8",
     "@react-navigation/native-stack": "^7.3.16",
     "expo": "~54.0.27",
+    "expo-audio": "~1.0.16",
     "expo-av": "~16.0.8",
     "expo-constants": "~18.0.10",
     "expo-font": "~14.0.9",
